2012-05-01 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFAttributedString.c: Implement CFAttributedStringCreate().
	* Tests/CFAttributedString/: Add simple tests.

2012-04-27 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.c: Fix incompatibility in retain/release.
	* Source/CFLocale.c:
	* Source/CFNumberFormatter.c: Do not release NULL pointer.

2012-04-27 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFTimeZone.c: Correctly generate time zone data.
	* Source/CFCalendar.c: Use CFTimeZone when opening a new calendar.
	* Tests/CFCalendar/basic.m:
	* Tests/CFLocale/displayvalues.m:
	* Tests/CFURL/create.m: Fix tests.

2012-04-27 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFTimeZone.c: Pass correct data size.
	* Tests/CFTimeZone/basic.m: Fix tests.
	* Tests/CFLocale/values.m: Fix error in previous commit.

2012-04-26 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFTimeZone.c: Correctly calculate GMT offset for zone name.
	* Source/CFDateFormatter.c: Reset formatter before using it.
	* Source/CFStringUtilities.c: Fix bug in find utility.

2012-04-26 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFBinaryHeap.c: Fix bug when removing minimum value.
	* Tests/CFString/general.m:
	* Tests/CFCalendar/basic.m:
	* Tests/CFNumberFormatter/parse.m:
	* Tests/CFArray/mutablearray.m:
	* Tests/CFArray/create.m:
	* Tests/CFBinaryHeap/general.m:
	* Tests/CFURLAccess/basic.m:
	* Tests/CFNumber/general.m:
	* Tests/CFLocale/displayvalues.m:
	* Tests/CFLocale/values.m:
	* Tests/CFDateFormatter/basic.m: Fixes for 64-bit system and 
	more verbose output to help debug.

2012-04-24 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFBag.c:
	* Source/CFTimeZone.c:
	* Source/CFBitVector.c:
	* Source/CFDictionary.c:
	* Source/CFString.c:
	* Source/CFCalendar.c:
	* Source/CFBase.c:
	* Source/CFStringFormat.c:
	* Source/CFSet.c:
	* Source/CFLocale.c:
	* Source/CFTree.c:
	* Source/CFDateFormatter.c:
	* Source/CFStringUtilities.c:
	* Source/CFXMLNode.c: