@@ -436,19 +436,23 @@ m4trace:configure.ac:84: -1- AC_DEFINE_TRACE_LITERAL([HAVE_ICU])
 m4trace:configure.ac:84: -1- m4_pattern_allow([^HAVE_ICU$])
 m4trace:configure.ac:84: -1- AH_OUTPUT([HAVE_ICU], [/* Define to 1 if you have International Components for Unicode. */
 @%:@undef HAVE_ICU])
-m4trace:configure.ac:87: -1- AC_CONFIG_FILES([Source/GNUmakefile])
-m4trace:configure.ac:89: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:89: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
-m4trace:configure.ac:89: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:89: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
-m4trace:configure.ac:89: -1- AC_SUBST_TRACE([LTLIBOBJS])
-m4trace:configure.ac:89: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:89: -1- AC_SUBST_TRACE([top_builddir])
-m4trace:configure.ac:89: -1- AC_SUBST_TRACE([top_build_prefix])
-m4trace:configure.ac:89: -1- AC_SUBST_TRACE([srcdir])
-m4trace:configure.ac:89: -1- AC_SUBST_TRACE([abs_srcdir])
-m4trace:configure.ac:89: -1- AC_SUBST_TRACE([top_srcdir])
-m4trace:configure.ac:89: -1- AC_SUBST_TRACE([abs_top_srcdir])
-m4trace:configure.ac:89: -1- AC_SUBST_TRACE([builddir])
-m4trace:configure.ac:89: -1- AC_SUBST_TRACE([abs_builddir])
-m4trace:configure.ac:89: -1- AC_SUBST_TRACE([abs_top_builddir])
+m4trace:configure.ac:115: -1- AC_DEFINE_TRACE_LITERAL([TZDIR])
+m4trace:configure.ac:115: -1- m4_pattern_allow([^TZDIR$])
+m4trace:configure.ac:115: -1- AH_OUTPUT([TZDIR], [/* Define to the directory contain time zone object files. */
+@%:@undef TZDIR])
+m4trace:configure.ac:118: -1- AC_CONFIG_FILES([Source/GNUmakefile])
+m4trace:configure.ac:120: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:120: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
+m4trace:configure.ac:120: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:120: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:120: -1- AC_SUBST_TRACE([LTLIBOBJS])
+m4trace:configure.ac:120: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:120: -1- AC_SUBST_TRACE([top_builddir])
+m4trace:configure.ac:120: -1- AC_SUBST_TRACE([top_build_prefix])
+m4trace:configure.ac:120: -1- AC_SUBST_TRACE([srcdir])
+m4trace:configure.ac:120: -1- AC_SUBST_TRACE([abs_srcdir])
+m4trace:configure.ac:120: -1- AC_SUBST_TRACE([top_srcdir])
+m4trace:configure.ac:120: -1- AC_SUBST_TRACE([abs_top_srcdir])
+m4trace:configure.ac:120: -1- AC_SUBST_TRACE([builddir])
+m4trace:configure.ac:120: -1- AC_SUBST_TRACE([abs_builddir])
+m4trace:configure.ac:120: -1- AC_SUBST_TRACE([abs_top_builddir])
